[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "intake-duckdb"
dynamic = ["version"]
description = "DuckDB plugin for Intake"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Blake Rosenthal"},
]
maintainers = [
    {name = "Blake Rosenthal", email = "brosenthal@anaconda.com"},
]
keywords = [
    "intake",
    "duckdb",
    "duck",
]
dependencies = [
    "intake",
    "pandas",
    "duckdb",
]

[project.entry-points."intake.drivers"]
duckdb = "intake_duckdb:DuckDBSource"
duckdb_cat = "intake_duckdb:DuckDBCatalog"
duckdb_transform = "intake_duckdb:DuckDBTransform"

[project.optional-dependencies]
test = [
    "pytest",
    "intake[server]",
    "python-snappy",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "numpydoc",
    "entrypoints",
    "myst-parser",
]

[tool.setuptools]
packages = [
    "intake_duckdb",
]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}+{ccount}.g{sha}"
dirty_template = "{tag}+{ccount}.g{sha}.dirty"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
ignore = ["E402"]  # top of file imports

[tool.ruff.per-file-ignores]
"*/tests/*" = ["E722"]  # bare `except`
"__init__.py" = ["F401"]  # imported but unused

[tool.isort]
profile = "black"
